<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/top"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="top"
                android:gravity="center"
                android:text="@string/supply_detail"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="vertical">

                <View style="@style/list_item_seperator_layout" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:stretchColumns="3,7">

                        <TableRow
                            android:background="@drawable/table_frame"
                            android:minHeight="?android:attr/listPreferredItemHeight">

                            <View style="@style/list_item_cell_seperator_layout" />

                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="2dip"
                                android:text="@string/supply_code"
                                android:textColor="@android:color/black"
                                android:textStyle="bold" />

                            <View style="@style/list_item_cell_seperator_layout" />

                            <TextView
                                android:id="@+id/tv11"
                                android:layout_width="35dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="2dip" />

                            <View style="@style/list_item_cell_seperator_layout" />

                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="2dip"
                                android:text="@string/supply_name"
                                android:textColor="@android:color/black"
                                android:textStyle="bold" />

                            <View style="@style/list_item_cell_seperator_layout" />

                            <TextView
                                android:id="@+id/tv12"
                                android:layout_width="35dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="2dip" />

                            <View style="@style/list_item_cell_seperator_layout" />
                        </TableRow>

                        <TableRow
                            android:background="@drawable/table_frame"
                            android:minHeight="?android:attr/listPreferredItemHeight">

                            <View style="@style/list_item_cell_seperator_layout" />

                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="2dip"
                                android:text="@string/phone"
                                android:textColor="@android:color/black"
                                android:textStyle="bold" />

                            <View style="@style/list_item_cell_seperator_layout" />

                            <TextView
                                android:id="@+id/tv21"
                                android:layout_width="35dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="2dip" />

                            <View style="@style/list_item_cell_seperator_layout" />

                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="2dip"
                                android:text="@string/tax"
                                android:textColor="@android:color/black"
                                android:textStyle="bold" />

                            <View style="@style/list_item_cell_seperator_layout" />

                            <TextView
                                android:id="@+id/tv22"
                                android:layout_width="35dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="2dip" />

                            <View style="@style/list_item_cell_seperator_layout" />
                        </TableRow>

                        <TableRow
                            android:background="@drawable/table_frame"
                            android:minHeight="?android:attr/listPreferredItemHeight">

                            <View style="@style/list_item_cell_seperator_layout" />

                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="2dip"
                                android:text="@string/address"
                                android:textColor="@android:color/black"
                                android:textStyle="bold" />

                            <View style="@style/list_item_cell_seperator_layout" />

                            <TextView
                                android:id="@+id/tv31"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center" />

                            <View style="@style/list_item_cell_seperator_layout" />

                        </TableRow>

                        <TableRow
                            android:background="@drawable/table_frame"
                            android:minHeight="?android:attr/listPreferredItemHeight">

                            <View style="@style/list_item_cell_seperator_layout" />

                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="2dip"
                                android:text="@string/contact"
                                android:textColor="@android:color/black"
                                android:textStyle="bold" />

                            <View style="@style/list_item_cell_seperator_layout" />

                            <TextView
                                android:id="@+id/tv41"
                                android:layout_width="35dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="2dip" />

                            <View style="@style/list_item_cell_seperator_layout" />

                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="2dip"
                                android:text="@string/position"
                                android:textColor="@android:color/black"
                                android:textStyle="bold" />

                            <View style="@style/list_item_cell_seperator_layout" />

                            <TextView
                                android:id="@+id/tv42"
                                android:layout_width="35dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="2dip" />

                            <View style="@style/list_item_cell_seperator_layout" />
                        </TableRow>

                        <TableRow
                            android:background="@drawable/table_frame"
                            android:minHeight="?android:attr/listPreferredItemHeight">

                            <View style="@style/list_item_cell_seperator_layout" />

                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="2dip"
                                android:text="@string/mobile"
                                android:textColor="@android:color/black"
                                android:textStyle="bold" />

                            <View style="@style/list_item_cell_seperator_layout" />

                            <TextView
                                android:id="@+id/tv51"
                                android:layout_width="35dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="2dip" />

                            <View style="@style/list_item_cell_seperator_layout" />

                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="2dip"
                                android:text="@string/mailbox"
                                android:textColor="@android:color/black"
                                android:textStyle="bold" />

                            <View style="@style/list_item_cell_seperator_layout" />

                            <TextView
                                android:id="@+id/tv52"
                                android:layout_width="35dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="2dip" />

                            <View style="@style/list_item_cell_seperator_layout" />
                        </TableRow>
                    </TableLayout>
                </LinearLayout>

                <View style="@style/list_item_seperator_layout" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/summary"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <WebView
                android:id="@+id/webView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></WebView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>


