<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/top"></include>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="top"
            android:gravity="center"
            android:text="用户详情"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

            <View style="@style/list_item_seperator_layout" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="3,7">

                    <TableRow
                        android:background="@drawable/table_frame"
                        android:minHeight="?android:attr/listPreferredItemHeight">

                        <View style="@style/list_item_cell_seperator_layout" />

                        <TextView
                            android:layout_width="65dip"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/system_manage_user_account"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                        <View style="@style/list_item_cell_seperator_layout" />

                        <TextView
                            android:id="@+id/tvAccount"
                            android:layout_width="35dp"
                            android:layout_height="match_parent"
                            android:gravity="center" />

                        <View style="@style/list_item_cell_seperator_layout" />

                        <TextView
                            android:layout_width="65dip"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/system_manage_user_name"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                        <View style="@style/list_item_cell_seperator_layout" />

                        <TextView
                            android:id="@+id/tvName"
                            android:layout_width="35dp"
                            android:layout_height="match_parent"
                            android:gravity="center" />

                        <View style="@style/list_item_cell_seperator_layout" />
                    </TableRow>

                    <TableRow
                        android:background="@drawable/table_frame"
                        android:minHeight="?android:attr/listPreferredItemHeight">

                        <View style="@style/list_item_cell_seperator_layout" />

                        <TextView
                            android:layout_width="65dip"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/gender"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                        <View style="@style/list_item_cell_seperator_layout" />

                        <TextView
                            android:id="@+id/tvGender"
                            android:layout_width="35dp"
                            android:layout_height="match_parent"
                            android:gravity="center" />

                        <View style="@style/list_item_cell_seperator_layout" />

                        <TextView
                            android:layout_width="65dip"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/birthday"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                        <View style="@style/list_item_cell_seperator_layout" />

                        <TextView
                            android:id="@+id/tvBirthday"
                            android:layout_width="35dp"
                            android:layout_height="match_parent"
                            android:gravity="center" />

                        <View style="@style/list_item_cell_seperator_layout" />
                    </TableRow>

                    <TableRow
                        android:background="@drawable/table_frame"
                        android:minHeight="?android:attr/listPreferredItemHeight">

                        <View style="@style/list_item_cell_seperator_layout" />

                        <TextView
                            android:layout_width="65dip"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/system_manage_user_state"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                        <View style="@style/list_item_cell_seperator_layout" />

                        <TextView
                            android:id="@+id/tvState"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center" />

                        <View style="@style/list_item_cell_seperator_layout" />
                    </TableRow>

                    <TableRow
                        android:background="@drawable/table_frame"
                        android:minHeight="?android:attr/listPreferredItemHeight">

                        <View style="@style/list_item_cell_seperator_layout" />

                        <TextView
                            android:layout_width="65dip"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/icon"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                        <View style="@style/list_item_cell_seperator_layout" />

                        <ImageView
                            android:id="@+id/image"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:padding="5dp" />

                        <View style="@style/list_item_cell_seperator_layout" />
                    </TableRow>

                </TableLayout>
            </LinearLayout>

            <View style="@style/list_item_seperator_layout" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
